Implement email auth in android

--- a/android/capacitor-firebase-auth/src/main/res/values/strings.xml
+++ b/android/capacitor-firebase-auth/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="twitter_provider_id">twitter.com</string>
     <string name="facebook_provider_id">facebook.com</string>
     <string name="phone_provider_id">phone</string>
+    <string name="email_password_provider_id">password</string>
 </resources>
